--- a/.htaccess
+++ b/.htaccess
@@ -13,3 +13,6 @@ RewriteRule ^accueil.html$ index.php [L]
 
 # parameters.php -> parametre.html
 RewriteRule ^parametre.html$ /views/parameters.php [L]
+
+# pages.php -> sujet-x.html
+# RewriteRule ^sujet-([0-9]+).html$ /views/pages.php?sujet=$1
